[tool.poetry]
name = 'gemma-flax'
version = '0.1.0'
description = 'Flax port of Gemma'
authors = ['Davis Yoshida <dyoshida@ttic.edu>']
readme = 'README.md'
packages = [
    {include = 'gemma_flax'}
]

[tool.poetry.dependencies]
python = '^3.9'
jax = '^0.4.23'
jaxlib = '^0.4.23'
flax = '^0.8.1'

[tool.poetry.dev-dependencies]
pytest = '^7.3.1'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
